refactor: fix styles

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header">
-      <div class="heading--hidden">
+      <div class="header__heading header__heading--hidden">
         <h1>online zoo</h1>
       </div>
       <div class="container">
@@ -43,7 +43,7 @@
       </div>
     </header>
     <div class="hero">
-      <div class="container watch-your-favourite-animal">
+      <div class="watch-your-favourite-animal container">
         <div class="watch-your-favourite-animal__content">
           <div class="watch-your-favourite-animal__text">
             <h2 class="hero-heading">Watch your favorite animal ONLINE</h2>
@@ -295,16 +295,16 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="./index.html">about</a>
+                      <a class="menu__link menu__link--footer" href="./index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link menu__link--footer" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../map/map.html">map</a>
+                      <a class="menu__link menu__link--footer" href="../map/map.html">map</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="javascript:void(0)">feedback</a>
+                      <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
                     </li>
                   </ul>
                 </nav>
