--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="heading--hidden">
+        <div class="header__heading header__heading--hidden">
           <h1>online zoo</h1>
         </div>
         <div class="container">
@@ -60,7 +60,7 @@
               <span class="tooltip tooltip-eagle">
                 <div class="tooltip-block tooltip-block--left">
                   <h6 class="tooltip-heading">eagle,</h6>
-                  <p class="tooltip-location text">california,USA</p>
+                  <p class="tooltip-location tooltip-location__text">california,USA</p>
                 </div>
               </span>
               <div class="map__pet-name map__pet-name--eagle">eagle</div>
@@ -80,7 +80,7 @@
               <span class="tooltip tooltip-alligator">
                 <div class="tooltip-block tooltip-block--right">
                   <h6 class="tooltip-heading">alligator,</h6>
-                  <p class="tooltip-location text">florida USA</p>
+                  <p class="tooltip-location tooltip-location__text">florida USA</p>
                 </div>
               </span>
               <div class="map__pet-name map__pet-name--alligator">alligator</div>
@@ -97,7 +97,7 @@
               <span class="tooltip tooltip-gorilla">
                 <div class="tooltip-block tooltip-block--right">
                   <h6 class="tooltip-heading">gorilla,</h6>
-                  <p class="tooltip-location text">eastern DRC</p>
+                  <p class="tooltip-location tooltip-location__text">eastern DRC</p>
                 </div>
               </span>
               <div class="map__pet-name map__pet-name--gorilla">gorilla</div>
@@ -117,7 +117,7 @@
               <span class="tooltip tooltip-panda">
                 <div class="tooltip-block tooltip-block--right">
                   <h6 class="tooltip-heading">panda,</h6>
-                  <p class="tooltip-location text">china</p>
+                  <p class="tooltip-location tooltip-location__text">china</p>
                 </div>
               </span>
               <div class="map__pet-name map__pet-name--panda">panda bear</div>
@@ -148,16 +148,16 @@
                 <nav class="footer-nav">
                   <ul class="menu footer-menu">
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../main/index.html">about</a>
+                      <a class="menu__link menu__link--footer" href="../main/index.html">about</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../page-not-found/page-not-found.html">contact us</a>
+                      <a class="menu__link menu__link--footer" href="../page-not-found/page-not-found.html">contact us</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../map/map.html">map</a>
+                      <a class="menu__link menu__link--footer" href="../map/map.html">map</a>
                     </li>
                     <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="javascript:void(0)">feedback</a>
+                      <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
                     </li>
                   </ul>
                 </nav>
