--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header">
-      <div class="heading--hidden">
+      <div class="header__heading header__heading--hidden">
         <h1>online zoo</h1>
       </div>
       <div class="container">
@@ -42,176 +42,178 @@
         </div>
       </div>
     </header>
-    <aside class="sidebar">
-      <ul class="sidebar-menu">
-        <li class="sidebar-icon icon-active">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/alligator.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-alligator">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">alligator,</h6>
-              <p class="tooltip-location text">florida, USA</p>
+    <div class="wrapper">
+      <aside class="sidebar">
+        <ul class="sidebar-menu">
+          <li class="sidebar-icon icon-active">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/alligator.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../panda/panda.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-panda">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">panda,</h6>
-              <p class="tooltip-location text">china</p>
+            <span class="tooltip tooltip-alligator">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">alligator,</h6>
+                <p class="tooltip-location text">florida, USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../panda/panda.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../eagle/eagle.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-eagle">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">eagle,</h6>
-              <p class="tooltip-location text">california,USA</p>
+            <span class="tooltip tooltip-panda">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">panda,</h6>
+                <p class="tooltip-location text">china</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../eagle/eagle.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../gorilla/gorilla.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-gorilla">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">gorilla,</h6>
-              <p class="tooltip-location text">eastern DRC</p>
+            <span class="tooltip tooltip-eagle">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">eagle,</h6>
+                <p class="tooltip-location text">california,USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../gorilla/gorilla.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
-            </a>
+            <span class="tooltip tooltip-gorilla">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">gorilla,</h6>
+                <p class="tooltip-location text">eastern DRC</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </aside>
+      <main class="main content">
+        <div class="container">
+          <div class="heading-container">
+            <h2 class="heading">alligator</h2>
           </div>
-        </li>
-      </ul>
-    </aside>
-    <main class="main">
-      <div class="container">
-        <div class="heading-container">
-          <h2 class="heading">alligator</h2>
+          <div class="video-container container">
+            <div class="playlist">
+              <iframe
+                class="playlist__item main-item"
+                width="1160"
+                height="653"
+                src="https://www.youtube-nocookie.com/embed/EnxRJii_dp8?&autoplay=1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item1"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item2"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item3"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item4"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </div>
-        <div class="video-container container">
-          <div class="playlist">
-            <iframe
-              class="playlist__item main-item"
-              width="1160"
-              height="653"
-              src="https://www.youtube-nocookie.com/embed/EnxRJii_dp8?&autoplay=1"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item1"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item2"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item3"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item4"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/h9jSNBmMC8Q"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+        <div class="info-container container">
+          <div class="info">
+            <div class="info info1 text">ZOO: Alligator Farm Zoological Park in Florida (USA)</div>
+            <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
+          </div>
+          <div class="spoilers">
+            <details class="spoiler-details spoiler-details1" open>
+              <summary class="spoiler-summary">
+                <span class="text">population</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">There are now more than 1 million alligators in the wild.</p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details2" open>
+              <summary class="spoiler-summary">
+                <span class="text">habitat</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">Alligators are almost exclusively found in freshwater rivers, lakes, marshes or swamps.</p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details3" open>
+              <summary class="spoiler-summary">
+                <span class="text">nutrition</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  These apex predators eat mostly fish, turtles, snakes, birds and small mammals. But alligators are known for being opportunists; when hungry, they will attack
+                  larger prey like deer or cattle.
+                </p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details4" open>
+              <summary class="spoiler-summary">
+                <span class="text">interesting facts</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  American alligators are typically between 10 and 15 feet long and can weigh 1,000 lbs. Despite being large and somewhat ungainly, alligators can run up to 11 mph
+                  on land--but they can't sustain that speed for very long.
+                </p>
+              </div>
+            </details>
           </div>
         </div>
-      </div>
-      <div class="info-container container">
-        <div class="info">
-          <div class="info info1 text">ZOO: Alligator Farm Zoological Park in Florida (USA)</div>
-          <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
-        </div>
-        <div class="spoilers">
-          <details class="spoiler-details spoiler-details1" open>
-            <summary class="spoiler-summary">
-              <span class="text">population</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">There are now more than 1 million alligators in the wild.</p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details2" open>
-            <summary class="spoiler-summary">
-              <span class="text">habitat</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">Alligators are almost exclusively found in freshwater rivers, lakes, marshes or swamps.</p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details3" open>
-            <summary class="spoiler-summary">
-              <span class="text">nutrition</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                These apex predators eat mostly fish, turtles, snakes, birds and small mammals. But alligators are known for being opportunists; when hungry, they will attack
-                larger prey like deer or cattle.
-              </p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details4" open>
-            <summary class="spoiler-summary">
-              <span class="text">interesting facts</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                American alligators are typically between 10 and 15 feet long and can weigh 1,000 lbs. Despite being large and somewhat ungainly, alligators can run up to 11 mph on
-                land--but they can't sustain that speed for very long.
-              </p>
-            </div>
-          </details>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer class="footer">
       <div class="footer-background">
         <div class="container content">
@@ -225,22 +227,22 @@
               </div>
             </div>
             <div class="footer-links__links">
-                <nav class="footer-nav">
-                  <ul class="menu footer-menu">
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../main/index.html">about</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../map/map.html">map</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="javascript:void(0)">feedback</a>
-                    </li>
-                  </ul>
-                </nav>
+              <nav class="footer-nav">
+                <ul class="menu footer-menu">
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
+                  </li>
+                </ul>
+              </nav>
               <address class="socials">
                 <ul class="social">
                   <li class="menu__item">
