--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header">
-      <div class="heading--hidden">
+      <div class="header__heading header__heading--hidden">
         <h1>online zoo</h1>
       </div>
       <div class="container">
@@ -42,179 +42,181 @@
         </div>
       </div>
     </header>
-    <aside class="sidebar">
-      <ul class="sidebar-menu">
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../alligator/alligator.html">
-              <img class="icon-img" src="../../../assets/icons/pets/alligator.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-alligator">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">alligator,</h6>
-              <p class="tooltip-location text">florida, USA</p>
+    <div class="wrapper">
+      <aside class="sidebar">
+        <ul class="sidebar-menu">
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../alligator/alligator.html">
+                <img class="icon-img" src="../../../assets/icons/pets/alligator.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon icon-active">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-panda">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">panda,</h6>
-              <p class="tooltip-location text">china</p>
+            <span class="tooltip tooltip-alligator">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">alligator,</h6>
+                <p class="tooltip-location text">florida, USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon icon-active">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../eagle/eagle.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-eagle">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">eagle,</h6>
-              <p class="tooltip-location text">california,USA</p>
+            <span class="tooltip tooltip-panda">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">panda,</h6>
+                <p class="tooltip-location text">china</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../eagle/eagle.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../gorilla/gorilla.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-gorilla">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">gorilla,</h6>
-              <p class="tooltip-location text">eastern DRC</p>
+            <span class="tooltip tooltip-eagle">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">eagle,</h6>
+                <p class="tooltip-location text">california,USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../gorilla/gorilla.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
-            </a>
+            <span class="tooltip tooltip-gorilla">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">gorilla,</h6>
+                <p class="tooltip-location text">eastern DRC</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </aside>
+      <main class="main content">
+        <div class="container">
+          <div class="heading-container">
+            <h2 class="heading">panda</h2>
           </div>
-        </li>
-      </ul>
-    </aside>
-    <main class="main">     
-      <div class="container">
-        <div class="heading-container">
-          <h2 class="heading">panda</h2>
+          <div class="video-container container">
+            <div class="playlist">
+              <iframe
+                class="playlist__item main-item"
+                width="1160"
+                height="653"
+                src="https://www.youtube-nocookie.com/embed/65JHo3Cy2tY?&autoplay=1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item1"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item2"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item3"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item4"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </div>
-        <div class="video-container container">
-          <div class="playlist">
-            <iframe
-              class="playlist__item main-item"
-              width="1160"
-              height="653"
-              src="https://www.youtube-nocookie.com/embed/65JHo3Cy2tY?&autoplay=1"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item1"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item2"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item3"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item4"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+        <div class="info-container container">
+          <div class="info">
+            <div class="info info1 text">ZOO: The Shenshuping Gengda Panda Center (Sichuan, China)</div>
+            <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
+          </div>
+          <div class="spoilers">
+            <details class="spoiler-details spoiler-details1" open>
+              <summary class="spoiler-summary">
+                <span class="text">population</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details2" open>
+              <summary class="spoiler-summary">
+                <span class="text">habitat</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few
+                  provinces of southwestern China.
+                </p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details3" open>
+              <summary class="spoiler-summary">
+                <span class="text">nutrition</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to
+                  meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.
+                </p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details4" open>
+              <summary class="spoiler-summary">
+                <span class="text">interesting facts</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily.
+                  Their coat keeps them warm in the cool moist climate of the mountain forests.
+                </p>
+              </div>
+            </details>
           </div>
         </div>
-      </div>
-      <div class="info-container container">
-        <div class="info">
-          <div class="info info1 text">ZOO: The Shenshuping Gengda Panda Center (Sichuan, China)</div>
-          <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
-        </div>
-        <div class="spoilers">
-          <details class="spoiler-details spoiler-details1" open>
-            <summary class="spoiler-summary">
-              <span class="text">population</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details2" open>
-            <summary class="spoiler-summary">
-              <span class="text">habitat</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few
-                provinces of southwestern China.
-              </p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details3" open>
-            <summary class="spoiler-summary">
-              <span class="text">nutrition</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to
-                meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.
-              </p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details4" open>
-            <summary class="spoiler-summary">
-              <span class="text">interesting facts</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their
-                coat keeps them warm in the cool moist climate of the mountain forests.
-              </p>
-            </div>
-          </details>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer class="footer">
       <div class="footer-background">
         <div class="container content">
@@ -228,22 +230,22 @@
               </div>
             </div>
             <div class="footer-links__links">
-                <nav class="footer-nav">
-                  <ul class="menu footer-menu">
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../main/index.html">about</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../map/map.html">map</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="javascript:void(0)">feedback</a>
-                    </li>
-                  </ul>
-                </nav>
+              <nav class="footer-nav">
+                <ul class="menu footer-menu">
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
+                  </li>
+                </ul>
+              </nav>
               <address class="socials">
                 <ul class="social">
                   <li class="menu__item">
