--- a/online-zoo/pages/page-not-found/page-not-found.html
+++ b/online-zoo/pages/page-not-found/page-not-found.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <header class="header">
-      <div class="heading--hidden">
+      <div class="header__heading header__heading--hidden">
         <h1>online zoo</h1>
       </div>
     </header>
     <main>
-      <div class="wrapper">
         <div class="page404">
           <div class="ooops">
             <h2 class="main-heading">ooops!</h2>
@@ -26,10 +25,9 @@
             <h3 class="heading-title">page not found</h3>
           </div>
           <div class="text">
-            <h4 class="heading-text">go back and try a different link</h4>
+            <a class="link" href="../main/index.html"><h4 class="heading-text">go back and try a different link</h4></a>
           </div>
         </div>
-      </div>
     </main>
   </body>
 </html>
