--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -10,7 +10,7 @@
 
   <body>
     <header class="header">
-      <div class="heading--hidden">
+      <div class="header__heading header__heading--hidden">
         <h1>online zoo</h1>
       </div>
       <div class="container">
@@ -42,179 +42,181 @@
         </div>
       </div>
     </header>
-    <aside class="sidebar">
-      <ul class="sidebar-menu">
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../alligator/alligator.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/alligator.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-alligator">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">alligator,</h6>
-              <p class="tooltip-location text">florida, USA</p>
+    <div class="wrapper">
+      <aside class="sidebar">
+        <ul class="sidebar-menu">
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../alligator/alligator.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/alligator.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../panda/panda.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-panda">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">panda,</h6>
-              <p class="tooltip-location text">china</p>
+            <span class="tooltip tooltip-alligator">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">alligator,</h6>
+                <p class="tooltip-location text">florida, USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../panda/panda.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/panda.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon icon-active">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-eagle">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">eagle,</h6>
-              <p class="tooltip-location text">california,USA</p>
+            <span class="tooltip tooltip-panda">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">panda,</h6>
+                <p class="tooltip-location text">china</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon icon-active">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/eagle.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="../gorilla/gorilla.html">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
-            </a>
-          </div>
-          <span class="tooltip tooltip-gorilla">
-            <div class="tooltip-block">
-              <h6 class="tooltip-heading">gorilla,</h6>
-              <p class="tooltip-location text">eastern DRC</p>
+            <span class="tooltip tooltip-eagle">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">eagle,</h6>
+                <p class="tooltip-location text">california,USA</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="../gorilla/gorilla.html">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/gorilla.png" alt="" />
+              </a>
             </div>
-          </span>
-        </li>
-        <li class="sidebar-icon">
-          <div class="icon-container">
-            <a href="javascript:void(0)">
-              <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
-            </a>
+            <span class="tooltip tooltip-gorilla">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">gorilla,</h6>
+                <p class="tooltip-location text">eastern DRC</p>
+              </div>
+            </span>
+          </li>
+          <li class="sidebar-icon">
+            <div class="icon-container">
+              <a href="javascript:void(0)">
+                <img class="icon-img" src="../../../assets/images/pets-sidebar/feed.svg" alt="" />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </aside>
+      <main class="main content">
+        <div class="container">
+          <div class="heading-container">
+            <h2 class="heading">eagle</h2>
           </div>
-        </li>
-      </ul>
-    </aside>
-    <main class="main">
-      <div class="container">
-        <div class="heading-container">
-          <h2 class="heading">eagle</h2>
+          <div class="video-container container">
+            <div class="playlist">
+              <iframe
+                class="playlist__item main-item"
+                width="1160"
+                height="653"
+                src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k?&autoplay=1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item1"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/UmclL6funN8"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item2"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item3"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/iC1-E0WHbfI"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <iframe
+                class="playlist__item item4"
+                width="275"
+                height="155"
+                src="https://www.youtube-nocookie.com/embed/8HMOPKVPk5g"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
         </div>
-        <div class="video-container container">
-          <div class="playlist">
-            <iframe
-              class="playlist__item main-item"
-              width="1160"
-              height="653"
-              src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k?&autoplay=1"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item1"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/UmclL6funN8"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item2"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/ZvX4KElPq2k"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item3"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/iC1-E0WHbfI"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="playlist__item item4"
-              width="275"
-              height="155"
-              src="https://www.youtube-nocookie.com/embed/8HMOPKVPk5g"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+        <div class="info-container container">
+          <div class="info">
+            <div class="info info1 text">ZOO: Santa Catalina Island Conservancy (California, USA)</div>
+            <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
+          </div>
+          <div class="spoilers">
+            <details class="spoiler-details spoiler-details1" open>
+              <summary class="spoiler-summary">
+                <span class="text">population</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.</p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details2" open>
+              <summary class="spoiler-summary">
+                <span class="text">habitat</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand
+                  individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
+                </p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details3" open>
+              <summary class="spoiler-summary">
+                <span class="text">nutrition</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles
+                  also feed on carrion, for example, they eat the corpses of large horned animals.
+                </p>
+              </div>
+            </details>
+            <details class="spoiler-details spoiler-details4" open>
+              <summary class="spoiler-summary">
+                <span class="text">interesting facts</span>
+              </summary>
+              <div class="spoiler-content">
+                <p class="spoiler-text text">
+                  Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United
+                  States of America.
+                </p>
+              </div>
+            </details>
           </div>
         </div>
-      </div>
-      <div class="info-container container">
-        <div class="info">
-          <div class="info info1 text">ZOO: Santa Catalina Island Conservancy (California, USA)</div>
-          <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
-        </div>
-        <div class="spoilers">
-          <details class="spoiler-details spoiler-details1" open>
-            <summary class="spoiler-summary">
-              <span class="text">population</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.</p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details2" open>
-            <summary class="spoiler-summary">
-              <span class="text">habitat</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand
-                individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
-              </p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details3" open>
-            <summary class="spoiler-summary">
-              <span class="text">nutrition</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles also
-                feed on carrion, for example, they eat the corpses of large horned animals.
-              </p>
-            </div>
-          </details>
-          <details class="spoiler-details spoiler-details4" open>
-            <summary class="spoiler-summary">
-              <span class="text">interesting facts</span>
-            </summary>
-            <div class="spoiler-content">
-              <p class="spoiler-text text">
-                Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United
-                States of America.
-              </p>
-            </div>
-          </details>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
     <footer class="footer">
       <div class="footer-background">
         <div class="container content">
@@ -228,41 +230,41 @@
               </div>
             </div>
             <div class="footer-links__links">
-                <nav class="footer-nav">
-                  <ul class="menu footer-menu">
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../main/index.html">about</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="../../map/map.html">map</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link" href="javascript:void(0)">feedback</a>
-                    </li>
-                  </ul>
-                </nav>
+              <nav class="footer-nav">
+                <ul class="menu footer-menu">
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="../../main/index.html">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="../../page-not-found/page-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="../../map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link" href="javascript:void(0)">feedback</a>
+                  </li>
+                </ul>
+              </nav>
               <address class="socials">
                 <ul class="social">
                   <li class="menu__item">
-                    <a class="menu__link" href="https://www.instagram.com">
+                    <a class="menu__link menu__link--footer" href="https://www.instagram.com">
                       <img src="../../../assets/icons/socials/insta.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
-                    <a class="menu__link" href="https://www.facebook.com">
+                    <a class="menu__link menu__link--footer" href="https://www.facebook.com">
                       <img src="../../../assets/icons/socials/facebook.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
-                    <a class="menu__link" href="https://www.twitter.com">
+                    <a class="menu__link menu__link--footer" href="https://www.twitter.com">
                       <img src="../../../assets/icons/socials/twitter.svg" alt="" />
                     </a>
                   </li>
                   <li class="menu__item">
-                    <a class="menu__link" href="https://youtube.com">
+                    <a class="menu__link menu__link--footer" href="https://youtube.com">
                       <img src="../../../assets/icons/socials/youtube.svg" alt="" />
                     </a>
                   </li>
